fixed top left logo visibility when non-expanded

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
 
 img.logo-horizontal {
-  width: 12rem;
+  width: 0;
   transition: all .5s ease;
   background-color: transparent;
 }
